--- a/conf/tip.yaml
+++ b/conf/tip.yaml
@@ -1,8 +1,8 @@
-- name: US One-off PayPal contribution
+- name: US One-off contribution with PayPal
   description: Successful one-off contribution in USD (using PayPal)
 
-- name: GB One-off PayPal contribution
+- name: GB One-off contribution with PayPal
   description: Successful one-off contribution in GBP (using PayPal)
 
-- name: AU One-off PayPal contribution
+- name: AU One-off contribution with PayPal
   description: Successful one-off contribution in AUD (using PayPal)
