Set the contractAcceptanceDate correctly for Digital Packs

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -39,6 +39,8 @@ touchpoint.backend.environments {
         }
       }
       digitalpack={
+        defaultFreeTrialPeriodDays=14
+        paymentGracePeriod = 2
         monthly="2c92c0f84bbfec8b014bc655f4852d9d"
         quarterly="2c92c0f84bbfec58014bc6a2d43a1f5b"
         annual="2c92c0f94bbffaaa014bc6a4212e205b"
@@ -58,6 +60,8 @@ touchpoint.backend.environments {
         }
       }
       digitalpack {
+        defaultFreeTrialPeriodDays=14
+        paymentGracePeriod = 2
         monthly="2c92c0f94f2acf73014f2c908f671591"
         quarterly="2c92c0f94f2acf76014f2c92b5791f0f"
         annual="2c92c0f84f2ac59d014f2c94aea9199e"
@@ -77,6 +81,8 @@ touchpoint.backend.environments {
         }
       }
       digitalpack {
+        defaultFreeTrialPeriodDays=14
+        paymentGracePeriod = 2
         monthly="2c92a0fb4edd70c8014edeaa4eae220a"
         quarterly="2c92a0fb4edd70c8014edeaa4e8521fe"
         annual="2c92a0fb4edd70c8014edeaa4e972204"
