--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -17,33 +17,33 @@ touchpoint.backend.environments {
         secret = ""
       }
       api {
-        username=""
-        password=""
-        token=""
+        username = ""
+        password = ""
+        token = ""
       }
     }
     zuora {
       api {
-        url="https://rest.apisandbox.zuora.com/v1"
-        username=""
-        password=""
+        url = "https://rest.apisandbox.zuora.com/v1"
+        username = ""
+        password = ""
       }
       contribution {
         monthly {
-          productRatePlanId="2c92c0f85a6b134e015a7fcd9f0c7855"
-          productRatePlanChargeId="2c92c0f85a6b1352015a7fcf35ab397c"
+          productRatePlanId = "2c92c0f85a6b134e015a7fcd9f0c7855"
+          productRatePlanChargeId = "2c92c0f85a6b1352015a7fcf35ab397c"
         }
         annual {
-          productRatePlanId="2c92c0f85e2d19af015e3896e824092c"
-          productRatePlanChargeId="2c92c0f85e2d19af015e3896e84d092e"
+          productRatePlanId = "2c92c0f85e2d19af015e3896e824092c"
+          productRatePlanChargeId = "2c92c0f85e2d19af015e3896e84d092e"
         }
       }
-      digitalpack={
-        defaultFreeTrialPeriodDays=14
+      digitalpack = {
+        defaultFreeTrialPeriodDays = 14
         paymentGracePeriod = 2
-        monthly="2c92c0f84bbfec8b014bc655f4852d9d"
-        quarterly="2c92c0f84bbfec58014bc6a2d43a1f5b"
-        annual="2c92c0f94bbffaaa014bc6a4212e205b"
+        monthly = "2c92c0f84bbfec8b014bc655f4852d9d"
+        quarterly = "2c92c0f84bbfec58014bc6a2d43a1f5b"
+        annual = "2c92c0f94bbffaaa014bc6a4212e205b"
       }
     }
   }
@@ -60,32 +60,32 @@ touchpoint.backend.environments {
         }
       }
       digitalpack {
-        defaultFreeTrialPeriodDays=14
+        defaultFreeTrialPeriodDays = 14
         paymentGracePeriod = 2
-        monthly="2c92c0f94f2acf73014f2c908f671591"
-        quarterly="2c92c0f94f2acf76014f2c92b5791f0f"
-        annual="2c92c0f84f2ac59d014f2c94aea9199e"
+        monthly = "2c92c0f94f2acf73014f2c908f671591"
+        quarterly = "2c92c0f94f2acf76014f2c92b5791f0f"
+        annual = "2c92c0f84f2ac59d014f2c94aea9199e"
       }
     }
   }
   PROD {
-    zuora{
+    zuora {
       contribution {
         monthly {
-          productRatePlanId="2c92a0fc5aacfadd015ad24db4ff5e97"
-          productRatePlanChargeId="2c92a0fc5aacfadd015ad250bf2c6d38"
+          productRatePlanId = "2c92a0fc5aacfadd015ad24db4ff5e97"
+          productRatePlanChargeId = "2c92a0fc5aacfadd015ad250bf2c6d38"
         }
         annual {
-          productRatePlanId="2c92a0fc5e1dc084015e37f58c200eea"
-          productRatePlanChargeId="2c92a0fc5e1dc084015e37f58c7b0f34"
+          productRatePlanId = "2c92a0fc5e1dc084015e37f58c200eea"
+          productRatePlanChargeId = "2c92a0fc5e1dc084015e37f58c7b0f34"
         }
       }
       digitalpack {
-        defaultFreeTrialPeriodDays=14
+        defaultFreeTrialPeriodDays = 14
         paymentGracePeriod = 2
-        monthly="2c92a0fb4edd70c8014edeaa4eae220a"
-        quarterly="2c92a0fb4edd70c8014edeaa4e8521fe"
-        annual="2c92a0fb4edd70c8014edeaa4e972204"
+        monthly = "2c92a0fb4edd70c8014edeaa4eae220a"
+        quarterly = "2c92a0fb4edd70c8014edeaa4e8521fe"
+        annual = "2c92a0fb4edd70c8014edeaa4e972204"
       }
     }
   }
