--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "ophan-tracker-js": "^1.3.13",
     "raven-js": "^3.26.1",
     "react-redux": "^5.0.7",
-    "react-router": "4.3.1",
-    "react-router-dom": "4.3.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "seedrandom": "^2.4.3",
