--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "npm-run-all": "^4.1.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^7.0.2",
     "postcss-loader": "^3.0.0",
     "postcss-pxtorem": "^4.0.1",
