--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,87 +1,7 @@
 //Used to provide defaults so that individual projects don't have to define settings they don't use
-touchpoint.backend.environments {
-  SANDBOX {
-    stripe {
-      AUD {
-        api.key.public = "pk_test_m0sjR1tGM22fpaz48csa49us"
-        api.key.secret = "dummy-key"
-      }
-      default {
-        api.key.public = "pk_test_Qm3CGRdrV4WfGYCpm0sftR0f"
-        api.key.secret = "dummy-key"
-      }
-
-      // Old schema
-      api.key {
-        public = "pk_test_Qm3CGRdrV4WfGYCpm0sftR0f"
-        secret = "dummy-key"
-      }
-    }
-    paypal {
-      user=""
-      password=""
-      signature="dummy-signature"
-      paypal-environment = "sandbox"
-      nvp-version = "124.0"
-      url = "https://api-3t.sandbox.paypal.com/nvp"
-    }
-  }
-
-  UAT {
-    stripe {
-      AUD {
-        api.key.public = "pk_test_m0sjR1tGM22fpaz48csa49us"
-        api.key.secret = "dummy-key"
-      }
-      default {
-        api.key.public = "pk_test_Qm3CGRdrV4WfGYCpm0sftR0f"
-        api.key.secret = "dummy-key"
-      }
-
-      // Old schema
-      api.key {
-        public = "pk_test_Qm3CGRdrV4WfGYCpm0sftR0f"
-        secret = "dummy-key"
-      }
-    }
-    paypal {
-      user=""
-      password=""
-      signature="dummy-signature"
-      paypal-environment = "sandbox"
-      nvp-version = "124.0"
-      url = "https://api-3t.sandbox.paypal.com/nvp"
-    }
-  }
-
-  PROD {
-    stripe {
-      AUD {
-        api.key.public = "pk_live_57xV50eFjPIA990PEGWJwoHp"
-        api.key.secret = "dummy-key"
-      }
-      default {
-        api.key.public = "pk_live_2O6zPMHXNs2AGea4bAmq5R7Z"
-        api.key.secret = "dummy-key"
-      }
-
-      // Old schema
-      api.key {
-        public = "pk_live_2O6zPMHXNs2AGea4bAmq5R7Z"
-        secret = "dummy-key"
-      }
-    }
-    paypal {
-      user=""
-      password=""
-      signature="dummy-signature"
-      paypal-environment = "production"
-      nvp-version = "124.0"
-      url="https://api-3t.paypal.com/nvp"
-    }
-  }
-}
-
+include classpath("touchpoint.SANDBOX.conf")
+include classpath("touchpoint.UAT.conf")
+include classpath("touchpoint.PROD.conf")
 aws {
   useEncryption=false
   encryptionKeyId=""
