Refactor the promotions config

--- a/src/main/resources/touchpoint.PROD.conf
+++ b/src/main/resources/touchpoint.PROD.conf
@@ -44,14 +44,16 @@ touchpoint.backend.environments {
           annual = "2c92a0fb4edd70c8014edeaa4e972204"
         }
       }
-      discounts {
+    }
+    promotions {
+      discount {
         productRatePlanId="2c92a0ff5345f9220153559d915d5c26"
         productRatePlanChargeId="2c92a0fd5345efa10153559e97bb76c6"
       }
-    }
-    dynamodb.promotions.tables {
-      promotions = "MembershipSub-Promotions-PROD"
-      campaigns = "MembershipSub-Campaigns-PROD"
+      tables {
+        promotions = "MembershipSub-Promotions-PROD"
+        campaigns = "MembershipSub-Campaigns-PROD"
+      }
     }
   }
 }
