--- a/src/main/resources/touchpoint.SANDBOX.conf
+++ b/src/main/resources/touchpoint.SANDBOX.conf
@@ -49,14 +49,16 @@ touchpoint.backend.environments {
           annual = "2c92c0f94bbffaaa014bc6a4212e205b"
         }
       }
-      discounts {
+    }
+    promotions {
+      discount {
         productRatePlanId="2c92c0f852f2ebb20152f9269f067819"
         productRatePlanChargeId="2c92c0f952f30dc30152f92b2ee62707"
       }
-    }
-    dynamodb.promotions.tables {
-      promotions = "MembershipSub-Promotions-DEV"
-      campaigns = "MembershipSub-Campaigns-DEV"
+      tables {
+        promotions = "MembershipSub-Promotions-DEV"
+        campaigns = "MembershipSub-Campaigns-DEV"
+      }
     }
   }
 }
