--- a/src/main/resources/touchpoint.UAT.conf
+++ b/src/main/resources/touchpoint.UAT.conf
@@ -44,14 +44,17 @@ touchpoint.backend.environments {
           annual = "2c92c0f84f2ac59d014f2c94aea9199e"
         }
       }
-      discounts {
+
+    }
+    promotions {
+      discount {
         productRatePlanId="2c92c0f953078a5601531299dae54a4d"
         productRatePlanChargeId="2c92c0f853077d930153129a91bd0f74"
       }
-    }
-    dynamodb.promotions.tables {
-      promotions = "MembershipSub-Promotions-UAT"
-      campaigns = "MembershipSub-Campaigns-UAT"
+      tables {
+        promotions = "MembershipSub-Promotions-UAT"
+        campaigns = "MembershipSub-Campaigns-UAT"
+      }
     }
   }
 }
