Add public to cache-control header for assets

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,4 +8,4 @@ googleAuth.domain = "guardian.co.uk"
 play.filters.csrf.cookie.name = "GU_support_csrf"
 
 # cache hashed assets for one year
-play.assets.cache."/public/compiled-assets/" = "max-age=31536000"
+play.assets.cache."/public/compiled-assets/" = "public, max-age=31536000"
