--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "flow": "flow",
     "lint": "eslint --ext .js --ext .jsx .",
     "build-dev": "webpack --config webpack.dev.js",
-    "build-prod": "npm-run-all clean validate test 'webpack --config webpack.prod.js --env.prod'",
+    "build-prod": "npm-run-all clean 'webpack --config webpack.prod.js --env.prod'",
     "webpack": "webpack",
-    "webpack-dev-server": "webpack-dev-server --config webpack.dev.js --port 9211 --public support.thegulocal.com",
+    "webpack-dev-server": "webpack-dev-server --config webpack.dev.js --port 9211 --public 78665601.ngrok.io",
     "devrun": "npm-run-all clean webpack-dev-server",
     "test": "echo 'Running JS tests' && jest",
     "jest-update-snapshot": "echo 'Updating JS tests' && jest -u",
