seo title, meta

--- a/conf/strings.conf
+++ b/conf/strings.conf
@@ -3,3 +3,4 @@ contributionsLanding.description="Help us deliver the independent journalism the
 subscriptionsLanding.description="Help us deliver the independent journalism the world needs. Support the Guardian by getting a subscription."
 digitalPackLanding.description="Subscribe to the Guardian Digital Pack and read the Guardian ad-free on all of your devices. The Digital Pack includes the Premium App and Daily Edition iPad app."
 weeklyLanding.description="Subscribe to The Guardian Weekly and enjoy seven days of international news in one magazine with free worldwide delivery."
+paperLanding.description="Subscribe to The Guardian and The Observer newspapers and save on the retail price all year round  |  Voucher and Home Delivery options available"
