Use a local settings file if it exists

--- a/conf/DEV.public.conf
+++ b/conf/DEV.public.conf
@@ -24,5 +24,5 @@ settingsSource.s3 {
   key= "DEV/settings.json"
 }
 
-# Uncomment the line below if you want to override admin settings locally
-# settingsSource.local.path="~/.gu/support-frontend-admin-console/settings.json"
+# To use local admin settings create this file (delete it to load from S3):
+settingsSource.local.path="~/.gu/support-frontend-admin-console/settings.json"
