Added GoCardless Direct Debit account checking validation service (#135)
* Migrated GoCardless Direct Debit account checking validation service from support-frontend

* added detailed logging to the GoCardless Direct Debit account validation service

* GoCardlessController tests

* removed unnecessary services from the GoCardlessBackend

* refactored direct debit check account error handling into private function

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -368,6 +368,14 @@ thread-pools {
     }
   }
 
+  gocardless {
+    executor = "thread-pool-executor"
+    throughput = 1
+    thread-pool-executor {
+      fixed-pool-size = 10
+    }
+  }
+
   jdbc {
     executor = "thread-pool-executor"
     throughput = 1
