prevent alarming on a 1 minute glitch in the state machine

--- a/cloud-formation/cfn.yaml
+++ b/cloud-formation/cfn.yaml
@@ -341,5 +341,6 @@ Resources:
       Period: 60
       EvaluationPeriods: 2
       Statistic: Sum
+      TreatMissingData: notBreaching
     DependsOn:
     - StateMachineUnavailableMetric
