Remove alarms we never act on (#139)

--- a/src/main/resources/cloud-formation.yaml
+++ b/src/main/resources/cloud-formation.yaml
@@ -523,78 +523,18 @@ Resources:
         Statistic: Sum
         TreatMissingData: notBreaching
 
-  PaymentErrorPaypalAlarm:
+  ThreeOrMorePostPaymentErrorsIn15Mins:
     Type: AWS::CloudWatch::Alarm
     Condition: CreateProdResources
     Properties:
       AlarmActions:
       - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:contributions-dev
-      AlarmName: !Sub ${App} ${Stage} Payment error for paypal contribution via the payment-api
-      MetricName: payment-error
-      Namespace: support-payment-api-PROD
-      Dimensions:
-        - Name: payment-provider
-          Value: Paypal
-      ComparisonOperator: GreaterThanThreshold
-      Threshold: 0
-      Period: 300
-      EvaluationPeriods: 1
-      Statistic: Sum
-      TreatMissingData: notBreaching
-
-  PaymentErrorStripeAlarm:
-    Type: AWS::CloudWatch::Alarm
-    Condition: CreateProdResources
-    Properties:
-      AlarmActions:
-      - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:contributions-dev
-      AlarmName: !Sub ${App} ${Stage} Payment error for stripe contribution via the payment-api
-      MetricName: payment-error
-      Namespace: support-payment-api-PROD
-      Dimensions:
-        - Name: payment-provider
-          Value: Stripe
-      ComparisonOperator: GreaterThanThreshold
-      Threshold: 0
-      Period: 300
-      EvaluationPeriods: 1
-      Statistic: Sum
-      TreatMissingData: notBreaching
-
-  PostPaymentErrorPaypalAlarm:
-    Type: AWS::CloudWatch::Alarm
-    Condition: CreateProdResources
-    Properties:
-      AlarmActions:
-      - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:contributions-dev
-      AlarmName: !Sub ${App} ${Stage} Error executing post-payment tasks - create identity id and send thankyou email - for paypal contribution via the payment-api
+      AlarmName: !Sub ${App} ${Stage} Multiple errors in post-payment tasks in the last fifteen minutes for one-off contributions via the payment-api
       MetricName: post-payment-tasks-error
       Namespace: support-payment-api-PROD
-      Dimensions:
-        - Name: payment-provider
-          Value: Paypal
       ComparisonOperator: GreaterThanThreshold
-      Threshold: 0
-      Period: 300
-      EvaluationPeriods: 1
-      Statistic: Sum
-      TreatMissingData: notBreaching
-
-  PostPaymentErrorStripeAlarm:
-    Type: AWS::CloudWatch::Alarm
-    Condition: CreateProdResources
-    Properties:
-      AlarmActions:
-      - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:contributions-dev
-      AlarmName: !Sub ${App} ${Stage} Error executing post-payment tasks - create identity id and send thankyou email - for stripe contribution via the payment-api
-      MetricName: post-payment-tasks-error
-      Namespace: support-payment-api-PROD
-      Dimensions:
-        - Name: payment-provider
-          Value: Stripe
-      ComparisonOperator: GreaterThanThreshold
-      Threshold: 0
-      Period: 300
+      Threshold: 3
+      Period: 900
       EvaluationPeriods: 1
       Statistic: Sum
       TreatMissingData: notBreaching
