--- a/conf/PROD.public.conf
+++ b/conf/PROD.public.conf
@@ -18,7 +18,9 @@ membersDataService.api.url="https://members-data-api.theguardian.com"
 play.filters.headers.contentSecurityPolicy = "default-src 'self' www.paypalobjects.com www.paypal.com www.sandbox.paypal.com js.stripe.com pasteup.guim.co.uk ophan.theguardian.com j.ophan.co.uk media.guim.co.uk www.google-analytics.com www.googletagmanager.com tagmanager.google.com polyfill.io www.googleadservices.com googleads.g.doubleclick.net www.google.com www.google.co.uk optimize.google.com static.ads-twitter.com bat.bing.com bid.g.doubleclick.net t.co analytics.twitter.com stats.g.doubleclick.net www.youtube-nocookie.com connect.facebook.net www.facebook.com consumer.krxd.net cdn.krxd.net beacon.krxd.net secure.adnxs.com checkout.stripe.com fonts.googleapis.com ssl.gstatic.com www.gstatic.com fonts.gstatic.com sentry.io www.dwin1.com data: wss: 'unsafe-inline' q.stripe.com payment.guardianapis.com https://interactive.guim.co.uk/"
 
 # Settings configurable via the admin console
-settingsSource.s3 {
-  bucket="support-frontend-admin-console"
-  key= "PROD/settings.json"
+settingsSource {
+  switches.s3 {
+    bucket="support-frontend-admin-console"
+    key= "PROD/switches.json"
+  }
 }
