support-frontend-admin-console -> support-admin-console

--- a/conf/PROD.public.conf
+++ b/conf/PROD.public.conf
@@ -20,7 +20,7 @@ play.filters.headers.contentSecurityPolicy = "default-src 'self' www.paypalobjec
 # Settings configurable via the admin console
 settingsSource {
   switches.s3 {
-    bucket="support-frontend-admin-console"
+    bucket="support-admin-console"
     key= "PROD/switches.json"
   }
 }
