--- a/conf/CODE.public.conf
+++ b/conf/CODE.public.conf
@@ -21,7 +21,7 @@ play.filters.headers.contentSecurityPolicy = "default-src 'self' www.paypalobjec
 # Settings configurable via the admin console
 settingsSource {
   switches.s3 {
-    bucket="support-frontend-admin-console"
+    bucket="support-admin-console"
     key= "CODE/switches.json"
   }
 }
