--- a/conf/DEV.public.conf
+++ b/conf/DEV.public.conf
@@ -22,12 +22,12 @@ settingsSource {
   switches {
     # Settings configurable via the admin console
     s3 {
-      bucket="support-frontend-admin-console"
+      bucket="support-admin-console"
       key="DEV/switches.json"
     }
     # To use local admin settings create this file (delete it to load from S3):
     local {
-      path="~/.gu/support-frontend-admin-console/switches.json"
+      path="~/.gu/support-admin-console/switches.json"
     }
   }
 }
