--- a/conf/DEV.public.conf
+++ b/conf/DEV.public.conf
@@ -18,11 +18,16 @@ paymentApi.url="https://payment.code.dev-guardianapis.com"
 membersDataService.api.url="https://members-data-api.thegulocal.com"
 play.filters.headers.contentSecurityPolicy = "default-src 'self' www.paypalobjects.com www.paypal.com www.sandbox.paypal.com js.stripe.com pasteup.guim.co.uk ophan.theguardian.com j.ophan.co.uk media.guim.co.uk www.google-analytics.com www.googletagmanager.com tagmanager.google.com polyfill.io www.googleadservices.com googleads.g.doubleclick.net www.google.com www.google.co.uk optimize.google.com static.ads-twitter.com bat.bing.com bid.g.doubleclick.net t.co analytics.twitter.com stats.g.doubleclick.net www.youtube-nocookie.com connect.facebook.net www.facebook.com consumer.krxd.net cdn.krxd.net beacon.krxd.net secure.adnxs.com checkout.stripe.com fonts.googleapis.com ssl.gstatic.com www.gstatic.com fonts.gstatic.com sentry.io www.dwin1.com data: wss: 'unsafe-inline' 'unsafe-eval'  q.stripe.com payment.code.dev-guardianapis.com https://interactive.guim.co.uk/"
 
-# Settings configurable via the admin console
-settingsSource.s3 {
-  bucket="support-frontend-admin-console"
-  key= "DEV/settings.json"
+settingsSource {
+  switches {
+    # Settings configurable via the admin console
+    s3 {
+      bucket="support-admin-console"
+      key="DEV/switches.json"
+    }
+    # To use local admin settings create this file (delete it to load from S3):
+    local {
+      path="~/.gu/support-admin-console/switches.json"
+    }
+  }
 }
-
-# To use local admin settings create this file (delete it to load from S3):
-settingsSource.local.path="~/.gu/support-frontend-admin-console/settings.json"
