Get amounts from config

--- a/conf/CODE.public.conf
+++ b/conf/CODE.public.conf
@@ -22,6 +22,10 @@ play.filters.headers.contentSecurityPolicy = "default-src 'self' www.paypalobjec
 settingsSource {
   switches.s3 {
     bucket="support-admin-console"
-    key= "CODE/switches.json"
+    key="CODE/switches.json"
+  }
+  amounts.s3 {
+    bucket="support-admin-console"
+    key="CODE/amounts.json"
   }
 }
