--- a/conf/DEV.public.conf
+++ b/conf/DEV.public.conf
@@ -30,4 +30,10 @@ settingsSource {
       path="~/.gu/support-admin-console/switches.json"
     }
   }
+  amounts {
+    s3 {
+      bucket="support-admin-console"
+      key="DEV/amounts.json"
+    }
+  }
 }
