--- a/conf/PROD.public.conf
+++ b/conf/PROD.public.conf
@@ -21,6 +21,10 @@ play.filters.headers.contentSecurityPolicy = "default-src 'self' www.paypalobjec
 settingsSource {
   switches.s3 {
     bucket="support-admin-console"
-    key= "PROD/switches.json"
+    key="PROD/switches.json"
+  }
+  amounts.s3 {
+    bucket="support-admin-console"
+    key="PROD/amounts.json"
   }
 }
