--- a/conf/riff-raff.yaml
+++ b/conf/riff-raff.yaml
@@ -23,3 +23,4 @@ deployments:
       prefixStack: false
       prefixStage: false
       publicReadAcl: true
+      cacheControl: public, max-age=3600
