add header stories

--- a/nginx/support.conf
+++ b/nginx/support.conf
@@ -35,3 +35,26 @@ server {
     server_name support.thegulocal.com;
     rewrite     ^   https://$server_name$request_uri? permanent;
 }
+
+server {
+    listen 443;
+    server_name support-ui.thegulocal.com;
+
+    ssl on;
+    ssl_certificate STAR_thegulocal_com_exp2020-01-09.crt; ## Supplied by https://github.com/guardian/identity-platform#setup-nginx-for-local-development
+    ssl_certificate_key STAR_thegulocal_com_exp2020-01-09.key; ## ditto
+
+    ssl_prefer_server_ciphers on;
+
+    location / {
+        proxy_pass http://localhost:9001/; ## storybook
+        proxy_max_temp_file_size 0;
+        proxy_set_header Host $http_host;
+    }
+}
+
+server {
+    listen      80;
+    server_name support-ui.thegulocal.com;
+    rewrite     ^   https://$server_name$request_uri? permanent;
+}
