Config for PriceSummaryService

--- a/support-config/src/main/resources/touchpoint.SANDBOX.conf
+++ b/support-config/src/main/resources/touchpoint.SANDBOX.conf
@@ -60,5 +60,8 @@ touchpoint.backend.environments {
         campaigns = "MembershipSub-Campaigns-DEV"
       }
     }
+    catalog {
+      s3Bucket = "s3://gu-zuora-catalog/PROD/Zuora-DEV"
+    }
   }
 }
