--- a/support-config/src/main/resources/touchpoint.UAT.conf
+++ b/support-config/src/main/resources/touchpoint.UAT.conf
@@ -56,5 +56,8 @@ touchpoint.backend.environments {
         campaigns = "MembershipSub-Campaigns-UAT"
       }
     }
+    catalog {
+      s3Bucket = "s3://gu-zuora-catalog/PROD/Zuora-UAT"
+    }
   }
 }
