--- a/support-config/src/main/resources/touchpoint.PROD.conf
+++ b/support-config/src/main/resources/touchpoint.PROD.conf
@@ -55,5 +55,8 @@ touchpoint.backend.environments {
         campaigns = "MembershipSub-Campaigns-PROD"
       }
     }
+    catalog {
+      s3Bucket = "s3://gu-zuora-catalog/PROD/Zuora-PROD"
+    }
   }
 }
