--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ logs
 target
 project/project
 storybook-static
+paparazzi
 
 bower_components
 public/stylesheets
@@ -37,4 +38,3 @@ assets/images/inline-svgs/*.svg
 /public/**/*.js.map
 /assets/javascripts/lib/bower-components/
 .yarnclean
-.test-screenshots
