--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "webpack-dev-server": "webpack-dev-server --config webpack.dev.js --port 9211 --public support.thegulocal.com",
     "devrun": "npm-run-all clean webpack-dev-server",
     "test": "echo 'Running JS tests' && jest",
+    "paparazzi": "paparazzi && open ./paparazzi",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "storybook-static": "build-storybook -c .storybook -o storybook-static",
     "jest-update-snapshot": "echo 'Updating JS tests' && jest -u",
@@ -78,6 +79,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@guardian/paparazzi": "^0.3.1",
     "@storybook/react": "^4.1.9",
     "autoprefixer": "^8.6.1",
     "babel-core": "^7.0.0-0",
