--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -16,6 +16,8 @@
     "webpack": "webpack",
     "webpack-dev-server": "webpack serve --config webpack.dev.js --port 9211",
     "devrun": "NODE_ENV=DEV npm-run-all clean webpack-dev-server",
+    "dev-assets": "webpack serve --config webpack.dev-server.js",
+    "dev": "yarn tsx watch --tsconfig ./tsconfig.server.json ./server.tsx",
     "test": "NODE_ENV=test echo 'Running JS tests' && jest",
     "test-watch": "NODE_ENV=test echo 'Running JS tests in watch mode' && jest --watch",
     "jest-update-snapshot": "echo 'Updating JS tests' && jest -u",
@@ -84,6 +86,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/serialize": "^1.1.2",
     "@emotion/utils": "^1.1.0",
+    "@fastify/reply-from": "^9.7.0",
     "@floating-ui/react": "^0.19.2",
     "@guardian/libs": "16.1.0",
     "@guardian/pasteup": "1.0.0-alpha.7",
@@ -101,6 +104,7 @@
     "classnames": "^2.5.1",
     "dompurify": "^3.1.3",
     "emotion-theming": "^11.0.0",
+    "fastify": "^4.26.2",
     "framer-motion": "^1.11.1",
     "lodash.debounce": "^4.0.6",
     "mockdate": "^3.0.5",
