fix: add oauth callback URL for events domain

--- a/support-frontend/conf/CODE.public.conf
+++ b/support-frontend/conf/CODE.public.conf
@@ -19,10 +19,15 @@ identity {
     authorize.url = "https://profile.code.dev-theguardian.com/oauth2/aus3v9gla95Toj0EE0x7/v1/authorize"
     token.url = "https://profile.code.dev-theguardian.com/oauth2/aus3v9gla95Toj0EE0x7/v1/token"
     callback.url = "https://support.code.dev-theguardian.com/oauth/callback"
+    # /events is served from live.{support.domain} to avoid apps blocking the domain as an in app purchase, so we should
+    # ensure that we redirect to that URL to avoid validation errors.
+    eventsCallback.url="https://live.code.dev-theguardian.com/oauth/callback"
   }
 }
 
 guardianDomain=".code.dev-theguardian.com"
+support.host="support.code.dev-theguardian.com"
+support.eventsHost="live.code.dev-theguardian.com"
 support.url="https://support.code.dev-theguardian.com"
 googleAuth.redirectUrl = "https://support.code.dev-theguardian.com/oauth2callback"
 paymentApi.url="https://payment.code.dev-guardianapis.com"
