--- a/support-frontend/conf/DEV.public.conf
+++ b/support-frontend/conf/DEV.public.conf
@@ -19,13 +19,16 @@ identity {
     authorize.url = "https://profile.code.dev-theguardian.com/oauth2/aus3v9gla95Toj0EE0x7/v1/authorize"
     token.url = "https://profile.code.dev-theguardian.com/oauth2/aus3v9gla95Toj0EE0x7/v1/token"
     callback.url = "https://support.thegulocal.com/oauth/callback"
+    # /events is served from live.{support.domain} to avoid apps blocking the domain as an in app purchase, so we should
+    # ensure that we redirect to that URL to avoid validation errors.
+    eventsCallback.url="https://live.thegulocal.com/oauth/callback"
   }
 }
 
 guardianDomain=".thegulocal.com"
-
+support.host="support.thegulocal.com"
+support.eventsHost="support.thegulocal.com"
 support.url="https://support.thegulocal.com"
-
 googleAuth.redirectUrl = "https://support.thegulocal.com/oauth2callback"
 paymentApi.url="https://payment.code.dev-guardianapis.com"
 membersDataService.api.url="https://members-data-api.thegulocal.com"
