--- a/support-frontend/conf/PROD.public.conf
+++ b/support-frontend/conf/PROD.public.conf
@@ -18,6 +18,9 @@ identity {
     authorize.url="https://profile.theguardian.com/oauth2/aus3xgj525jYQRowl417/v1/authorize"
     token.url="https://profile.theguardian.com/oauth2/aus3xgj525jYQRowl417/v1/token"
     callback.url="https://support.theguardian.com/oauth/callback"
+    # /events is served from live.{support.domain} to avoid apps blocking the domain as an in app purchase, so we should
+    # ensure that we redirect to that URL to avoid validation errors.
+    eventsCallback.url="https://live.theguardian.com/oauth/callback"
   }
 }
 
