--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -88,7 +88,7 @@
     "@floating-ui/react": "^0.19.2",
     "@guardian/libs": "16.1.0",
     "@guardian/pasteup": "1.0.0-alpha.7",
-    "@guardian/source": "1.0.1",
+    "@guardian/source": "1.0.3",
     "@guardian/source-development-kitchen": "1.0.0",
     "@guardian/support-service-lambdas": "guardian/support-service-lambdas#70e330b5c433184981e2c6955025cbaa7666f353",
     "@guardian/tsconfig": "^0.2.0",
@@ -106,7 +106,9 @@
     "lodash.debounce": "^4.0.6",
     "mockdate": "^3.0.5",
     "ophan-tracker-js": "^1.4.3",
+    "react": "18.2.0",
     "react-day-picker": "^7.4.8",
+    "react-dom": "18.2.0",
     "react-is": "^18.2.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.23.0",
@@ -187,13 +189,11 @@
     "postcss": "^8.4.38",
     "postcss-loader": "^7.3.0",
     "postcss-pxtorem": "^6.0.0",
-    "preact": "^10.4.6",
+    "preact": "^10.23.2",
     "preact-render-to-string": "^5.2.6",
     "prettier": "^2.8.8",
     "prettier-eslint": "^16.3.0",
     "pretty-format": "^29.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-svg-loader": "^3.0.3",
     "rimraf": "^5.0.1",
     "sass": "^1.69.5",
