--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -9,7 +9,7 @@
     "lint:check": "eslint ./assets --ext .ts --ext .tsx",
     "lint:fix": "yarn lint:check --fix",
     "build-dev": "webpack --config webpack.dev.js",
-    "build-ssr": "webpack --config webpack.ssr.js && node scripts/ssrScript.js",
+    "build-ssr": "tsx ./scripts/build-ssr-holding-content.tsx",
     "build-prod-no-test": "npm-run-all clean 'webpack --config webpack.prod.js'",
     "build-prod": "npm-run-all clean test 'webpack --config webpack.prod.js'",
     "build-github-action": "npm-run-all clean 'webpack --config webpack.prod.js --env ci=github'",
@@ -114,6 +114,7 @@
     "redux-thunk": "^2.3.0",
     "seedrandom": "^3.0.5",
     "snarkdown": "^2.0.0",
+    "tsx": "^4.19.1",
     "utility-types": "^3.10.0",
     "uuid": "^9.0.0",
     "valibot": "^0.31.0",
@@ -187,8 +188,8 @@
     "postcss": "^8.4.38",
     "postcss-loader": "^7.3.0",
     "postcss-pxtorem": "^6.0.0",
-    "preact": "^10.4.6",
-    "preact-render-to-string": "^5.2.6",
+    "preact": "^10.23.2",
+    "preact-render-to-string": "^6.5.10",
     "prettier": "^2.8.8",
     "prettier-eslint": "^16.3.0",
     "pretty-format": "^29.7.0",
