--- a/support-e2e/package.json
+++ b/support-e2e/package.json
@@ -7,7 +7,9 @@
 		"prettier-fix": "prettier --write ./",
 		"test-browserstack": "RUNNING_IN_BROWSERSTACK=true playwright test --config=playwright.browserstack.config.ts",
 		"test-local": "playwright test --ui --config=playwright.local.config.ts",
-		"test-prod": "playwright test --ui --config=playwright.prod.config.ts"
+		"test-prod": "playwright test --ui --config=playwright.prod.config.ts",
+		"test-smoke": "playwright test --project=smoke --ui --config=playwright.config.ts",
+		"test-cron": "playwright test --project=cron --ui --config=playwright.config.ts"
 	},
 	"dependencies": {
 		"@playwright/test": "1.46.1",
