--- a/.github/workflows/playwright-smoke.yml
+++ b/.github/workflows/playwright-smoke.yml
@@ -26,7 +26,7 @@ jobs:
       run: yarn playwright install --with-deps
     - name: Run Playwright tests
       working-directory: ./support-e2e
-      run: yarn playwright test --project=smoke --config=playwright.config.ts
+      run: yarn test-smoke
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
