--- a/support-e2e/package.json
+++ b/support-e2e/package.json
@@ -10,8 +10,10 @@
 		"test-prod": "playwright test --ui --config=playwright.prod.config.ts",
 		"test-smoke": "playwright test --project=smoke --config=playwright.config.ts",
 		"test-smoke-ui": "playwright test --project=smoke --config=playwright.config.ts --ui",
+		"test-smoke-dev": "playwright test --project=smoke --config=playwright.dev.config.ts --ui",
 		"test-cron": "playwright test --project=cron --config=playwright.config.ts",
-		"test-cron-ui": "playwright test --project=cron --config=playwright.config.ts --ui"
+		"test-cron-ui": "playwright test --project=cron --config=playwright.config.ts --ui",
+		"test-cron-dev": "playwright test --project=cron --config=playwright.dev.config.ts --ui"
 	},
 	"dependencies": {
 		"@playwright/test": "1.46.1",
