Add jest test for schema

--- a/support-workers/package.json
+++ b/support-workers/package.json
@@ -17,8 +17,13 @@
   },
   "devDependencies": {
     "@guardian/prettier": "^2.1.5",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.4",
+    "@types/node": "^20.11.27",
     "prettier": "^2.8.8",
     "prettier-eslint": "^16.3.0",
-    "pretty-format": "^29.7.0"
+    "pretty-format": "^29.7.0",
+    "typescript": "^5.2.2"
   }
 }
