--- a/support-frontend/tsconfig.json
+++ b/support-frontend/tsconfig.json
@@ -28,7 +28,8 @@
 		"./declaration.d.ts",
 		"./window.d.ts",
 		"./node_modules/@guardian/support-service-lambdas/modules/product-catalog/src",
-		"./scripts/build-ssr-holding-content.tsx"
+		"./scripts/build-ssr-holding-content.tsx",
+    "./scripts/build-ssr-newspaper-archive-header.tsx"
 	], // The files to type check,
 	"exclude": ["node_modules"] // The files to not type check
 }
