riff-raff.yaml change

--- a/support-workers/riff-raff.yaml
+++ b/support-workers/riff-raff.yaml
@@ -8,7 +8,9 @@ deployments:
     type: cloud-formation
     app: workers
     parameters:
-      templatePath: cfn.yaml
+      templateStagePaths:
+        CODE: SupportWorkers-CODE.template.json
+        PROD: SupportWorkers-API-PROD.template.json
   support-workers:
     type: aws-lambda
     parameters:
