--- a/.github/workflows/support-workers-build.yml
+++ b/.github/workflows/support-workers-build.yml
@@ -86,7 +86,7 @@ jobs:
               support-workers:
                 type: aws-lambda
                 parameters:
-                  bucket: support-workers-dist
+                  bucketSSMKey: /account/services/support-workers.artifact.bucket
                   functionNames:
                     - "-CreatePaymentMethodLambda-"
                     - "-CreateSalesforceContactLambda-"
@@ -101,7 +101,7 @@ jobs:
               it-tests:
                 type: aws-s3
                 parameters:
-                  bucket: support-workers-dist
+                  bucketSSMKey: /account/services/support-workers.artifact.bucket
                   cacheControl: private
                   publicReadAcl: false
           contentDirectories: |
