--- a/.github/workflows/support-workers-build.yml
+++ b/.github/workflows/support-workers-build.yml
@@ -80,10 +80,9 @@ jobs:
                 type: cloud-formation
                 app: workers
                 parameters:
-                  bucketSSMKey: /account/services/support-workers.artifact.bucket
                   templateStagePaths:
                     CODE: SupportWorkers-CODE.template.json
-                    PROD: SupportWorkers-API-PROD.template.json
+                    PROD: SupportWorkers-PROD.template.json
               support-workers:
                 type: aws-lambda
                 parameters:
