Try using hardcoded bucket again

--- a/.github/workflows/support-workers-build.yml
+++ b/.github/workflows/support-workers-build.yml
@@ -86,6 +86,7 @@ jobs:
               support-workers:
                 type: aws-lambda
                 parameters:
+                  bucket: support-workers-dist
                   functionNames:
                     - "-CreatePaymentMethodLambda-"
                     - "-CreateSalesforceContactLambda-"
@@ -100,6 +101,7 @@ jobs:
               it-tests:
                 type: aws-s3
                 parameters:
+                  bucket: support-workers-dist
                   cacheControl: private
                   publicReadAcl: false
           contentDirectories: |
