add ability to be iframed to CSP

--- a/support-frontend/conf/DEV.public.conf
+++ b/support-frontend/conf/DEV.public.conf
@@ -109,7 +109,7 @@ _src=${_src} "https://cdn.tickettailor.com/js/widgets/min/widget.css"
 
 play.filters.csp.directives {
   default-src=${_src}
-  frame-ancestors="https://gnmtouchpoint--dev1--c.cs88.visual.force.com https://gnmtouchpoint--dev1.lightning.force.com http://localhost:6006 http://localhost:3030 https://gnmtouchpoint--dev1--c.sandbox.vf.force.com https://gnmtouchpoint--dev1.sandbox.lightning.force.com"
+  frame-ancestors="https://theguardian.newspapers.com https://gnmtouchpoint--dev1--c.cs88.visual.force.com https://gnmtouchpoint--dev1.lightning.force.com http://localhost:6006 http://localhost:3030 https://gnmtouchpoint--dev1--c.sandbox.vf.force.com https://gnmtouchpoint--dev1.sandbox.lightning.force.com"
   script-src=null
 }
 
