--- a/support-frontend/conf/CODE.public.conf
+++ b/support-frontend/conf/CODE.public.conf
@@ -105,7 +105,7 @@ _src=${_src} "https://cdn.tickettailor.com/js/widgets/min/widget.css"
 
 play.filters.csp.directives {
   default-src=${_src}
-  frame-ancestors="https://gnmtouchpoint--dev1--c.cs88.visual.force.com https://gnmtouchpoint--dev1.lightning.force.com https://m.code.dev-theguardian.com https://gnmtouchpoint--dev1--c.sandbox.vf.force.com https://gnmtouchpoint--dev1.sandbox.lightning.force.com"
+  frame-ancestors="https://theguardian.newspapers.com https://gnmtouchpoint--dev1--c.cs88.visual.force.com https://gnmtouchpoint--dev1.lightning.force.com https://m.code.dev-theguardian.com https://gnmtouchpoint--dev1--c.sandbox.vf.force.com https://gnmtouchpoint--dev1.sandbox.lightning.force.com"
   script-src=null
 }
 
