--- a/support-frontend/conf/PROD.public.conf
+++ b/support-frontend/conf/PROD.public.conf
@@ -104,7 +104,7 @@ _src=${_src} "https://cdn.tickettailor.com/js/widgets/min/widget.css"
 
 play.filters.csp.directives {
   default-src=${_src}
-  frame-ancestors="https://gnmtouchpoint--c.eu31.visual.force.com https://gnmtouchpoint.lightning.force.com https://www.theguardian.com https://gnmtouchpoint--c.vf.force.com"
+  frame-ancestors="https://theguardian.newspapers.com https://gnmtouchpoint--c.eu31.visual.force.com https://gnmtouchpoint.lightning.force.com https://www.theguardian.com https://gnmtouchpoint--c.vf.force.com"
   script-src=null
 }
 
