Fix errors reported by tsc in the tests

--- a/support-frontend/tsconfig.json
+++ b/support-frontend/tsconfig.json
@@ -20,7 +20,8 @@
 		// These override @guardian/tsconfig as they have introduced a lot of errors.
 		// The number of errors indicated below is at the time of writing to give an idea of the scale of the fix needed.
 		// We should look at removing these as soon as we can.
-		"noUncheckedIndexedAccess": false // 209 errors in 63 files.
+		"noUncheckedIndexedAccess": false, // 209 errors in 63 files.
+		"types": ["@testing-library/jest-dom"]
 	},
 	"include": [
 		"./assets",
