--- a/support-frontend/package.json
+++ b/support-frontend/package.json
@@ -149,6 +149,7 @@
 		"@testing-library/jest-dom": "^6.6.2",
 		"@testing-library/react": "^15.0.2",
 		"@testing-library/user-event": "^14.5.2",
+		"@types/jest": "^29.5.14",
 		"@types/jsdom": "^21.1.6",
 		"@types/lodash.debounce": "^4.0.9",
 		"@types/react-dom": "^17.0.11",
